--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
 
 		<form class="row g-3 needs-validation was-validated" novalidate>
 			<div class="col-md-4">
-			  <label for="first-name-input" class="form-label">First name</label>
+			  <label for="first-name-input" class="form-label">First Name</label>
 			  <input type="text" class="form-control" id="first-name-input"  required>
 			  <div class="invalid-feedback">
 				First name required!
 			  </div>
 			</div>
 			<div class="col-md-4">
-			  <label for="last-name-input" class="form-label">Last name</label>
+			  <label for="last-name-input" class="form-label">Last Name</label>
 			  <input type="text" class="form-control" id="last-name-input"  required>
 			  <div class="invalid-feedback">
 			Last name required!
@@ -33,7 +33,7 @@
 			  <label for="email-input" class="form-label">Email Address</label>
 			  <div class="input-group has-validation">
 				<span class="input-group-text" id="inputGroupPrepend">@</span>
-				<input type="text" class="form-control" id="email-input" aria-describedby="inputGroupPrepend" required>
+				<input type="email" class="form-control" id="email-input" aria-describedby="inputGroupPrepend" required>
 				<div class="invalid-feedback">
 					Email required!
 				</div>
@@ -47,8 +47,8 @@
 			  </div>
 			</div>
 			<div class="col-md-3">
-			  <label for="graduation-year-input" class="form-label">Graduation Year</label>
-			  <select class="form-select" id="graduation-year-input" required>
+			  <label for="grad-year-select" class="form-label">Graduation Year</label>
+			  <select class="form-select" id="grad-year-select" required>
 				<option selected disabled value="">Choose...</option>
 				<option>2020</option>
 				<option>2021</option>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="col-md-3">
 			  <label for="roll-no-input" class="form-label">Roll No.</label>
-			  <input type="text" class="form-control" id="roll-no-input" required>
+			  <input type="number" class="form-control" id="roll-no-input" required>
 			  <div class="invalid-feedback">
 				Please provide a valid Roll no.
 			  </div>
